@@ -96,6 +96,7 @@ private slots:
     void on_cb_writeLog_toggled(bool checked);
     void on_sb_nrLogBackups_valueChanged(int value);
     void on_miroBrowseButton_clicked();
+    void miroPathTextChanged(const QString &text);
     void on_btn_resetHistory_clicked();
     void on_btRenameTheme_clicked();
     void on_btCopyTheme_clicked();
